--- a/examples/extend/mid.pug
+++ b/examples/extend/mid.pug
@@ -6,8 +6,5 @@ block prepend test1
 block test2
   p mid-test2
 
-//- block append test3
-//-   p mid-test3-append
-
-//- block test4
-//-   p test4
+block test4
+  p test4
