--- a/examples/basic.pug
+++ b/examples/basic.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
   head
-    title #{pageTitle}
+    title= pageTitle
     script(type="text/javascript").
       if (foo) bar(1 + 5)
   body
@@ -11,6 +11,7 @@ html(lang="en")
         p You are amazing
       else
         p Get on it!
+      p #{foo("string", 11)}
       p.
         Pug is a terse and simple templating language with a
         strong focus on performance and powerful features.
