--- a/examples/import/import.pug
+++ b/examples/import/import.pug
@@ -1,3 +1,6 @@
+style
+  include sub/style.css
+
 p Main
-  include "sub/import1.pug"
-include "sub/import2.pug"
+  include sub/import1
+include sub/import2.pug
