--- a/examples/basic.pug
+++ b/examples/basic.pug
@@ -11,7 +11,7 @@ html(lang="en")
         p You are amazing
       else
         p Get on it!
-      p #{foo("string", 11)}
+      p(style="color: green") #{foo("string", 11)}
       p.
         Pug is a terse and simple templating language with a
         strong focus on performance and powerful features.
